Chore: Remove `commons-io` dependency and update `Resources` utility to use standard Java APIs